--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,19 @@
-body
-  background: red
+html
+  background: scale-lightness(#0b353f, -30%)
+
+.container
+  width: 1280px
+  margin: 0 auto
+  overflow: auto
+  .title
+    text-align: center
+    color: #FFA500
+  .title__link
+    display: inline-block
+    color: white
+    &:hover
+      text-decoration: none
+
+.chart-demo
+  float: left
+  width: 640px
