--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,7 +1,10 @@
 html, body
   height: 400px
   overflow: hidden
+  margin: 0
 
+.fixed
+  position: fixed
 
 #wrap
   &::after
@@ -11,8 +14,8 @@ html, body
   .item
     visibility: hidden
     float: left
-    width: 60px
-    height: 60px
+    width: 50px
+    height: 50px
     border: 1px solid green
     font-size: 40px
     &:nth-child(4n+1)
