--- a/app/components/style.sass
+++ b/app/components/style.sass
@@ -1,6 +1,13 @@
 body
-  background: yellow
+  background: rgb(67, 167, 210)
 
 h1
-  color: black
+  display: inline-block
+  color: green
   transform: rotate(5deg)
+
+.txt
+  &-color-1
+    color: rgb(28, 244, 33)
+  &-color-2
+    color: rgb(231, 222, 65)
