--- a/app/components/style.sass
+++ b/app/components/style.sass
@@ -1,13 +1,38 @@
+@import '../../node_modules/react-bootstrap-sweetalert/lib/css/animations.css'
+
 body
-  background: rgb(67, 167, 210)
+  font-family: proxima-nova,"Helvetica Neue",Helvetica,Roboto,Arial,sans-serif
+  background: rgb(251, 244, 176)
+
+.fluid-container
+  width: 600px
+  margin: 100px auto
 
 h1
-  display: inline-block
-  color: green
-  transform: rotate(5deg)
+  margin-bottom: 20px
+.tool-list
+  margin-bottom: 15px
+.isComplete
+  color: red
+  text-decoration: line-through
 
-.txt
-  &-color-1
-    color: rgb(28, 244, 33)
-  &-color-2
-    color: rgb(231, 222, 65)
+.filter-option
+  margin-left: 10px
+  &.active
+    color: gold
+    &:hover
+      color: gold
+
+.btn
+  margin-left: 5px
+
+input.todoText
+  margin-right: 10px
+
+.todoItem
+  margin-bottom: 10px
+
+.todo-tools
+  margin-left: 10px
+  .fa
+    margin-left: 5px
